# webrtc-demo

./: Cargo.toml  index.html  package.json  server.js
client/: Cargo.toml  index.html
client/src/: main.rs
old/: index.html  server.js
server/: Cargo.toml  server.js
server/src/: lib.rs  main.rs
src/: _main.rs  main.rs
