[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28"
uuid = { version = "1.18.1", features = ["serde"] }
webrtc = { version = "0.14", default-features = false }
server = { path = "../server" }
